# owo-pkg

./: .gitignore  .gitmodules  CMakeLists.txt
old/: package.cpp  package.hpp  repo.hpp
src/: cache.cpp  cache.h  cache.hpp  cli.cpp  cli.h  cli.hpp  http.cpp  http.h  http.hpp  main.cpp  main.hpp  owo-pkg.cpp  owopkg.cpp  owopkg.hpp  package.cpp  package.h  package.hpp  repo.cpp  repo.h  repo.hpp  shared.cpp  shared.hpp
src/commands/: install.cpp  install.h  install.hpp  remove.cpp  remove.h  remove.hpp  search.cpp  search.hpp  update.cpp  update.h  update.hpp
src/core/: cli.cpp  cli.hpp  crypto.cpp  crypto.hpp  database.cpp  database.hpp  http.cpp  http.hpp  logging.cpp  logging.hpp
src/package/: package-manager.cpp  package-manager.hpp  package.cpp  package.hpp
src/repository/: repository-manager.cpp  repository-manager.hpp  repository.cpp  repository.hpp
src/utils/: crypto.cpp  crypto.hpp  platform.cpp  platform.hpp
